k8s/java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glucko-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      serviceAccountName: gke-db-sa
      containers:
        - name: java-app
          image: europe-central2-docker.pkg.dev/glucko-track-prod/glucko-repository/java-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:latest
          args:
            - "--port=5432"
            - "glucko-track-prod:europe-central2:glucko-db"
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
