k8s/java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glucko-java-service
  labels:
    app: java-app
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: java-app
